GNOME Bugzilla – Bug 693727
rtpvrawpay/depay negotiation broken
Last modified: 2013-06-05 10:17:11 UTC
works: gst-launch-1.0 videotestsrc ! video/x-raw ! rtpvrawpay ! rtpvrawdepay ! xvimagesink fails: gst-launch-1.0 videotestsrc ! video/x-raw ! rtpvrawpay ! rtpvrawdepay ! ximagesink
The rfc only specifies very few rgb formats, maybe none supported by the sink. Although it could also just not negotiate properly.
If the sink doesn't support the format, shouldn't it do a negotiation error ?
One of the API problems of the base rtp depayloader, there is no support for passing the NOT_NEGOTIATED return value from the process function.
commit 5ba3fd3c6370396842a1f85e201f26c6eeabb833 Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Wed Apr 24 16:24:25 2013 +0200 vrawdepay: return output buffer from process Return the output buffer from the process function instead of pushing it ourselves. This way, the subclass can actually deal with the return value of the push. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=693727